--- a/desafio012/estilo/style.css
+++ b/desafio012/estilo/style.css
@@ -1,13 +1,27 @@
 @charset "UTF-8";
+
+@import url('https://fonts.googleapis.com/css2?family=Passion+One:wght@400;700;900&display=swap');
+
+@import url('https://fonts.googleapis.com/css2?family=Sriracha&display=swap');
  
+
+:root{
+    --font1: Tahoma, Geneva, Verdana, sans-serif;
+    --font2: "Passion One", sans-serif;
+    --font3:  "Sriracha", cursive;
+}
+hei
 html, body{
     min-height: 100%vh;
+    font-family: var(--font1);
+    font-size: 2vw;
     
 }
 header{
     background-color: black;
     color: white;
     text-align: center;
+    font-family: var(--font2);
 }
 header> h1 {
      padding-top: 50px;
@@ -33,11 +47,13 @@ padding-top: 10vh;
 padding-bottom: 10vh;
 line-height: 2em;
 padding-left: 30px;
-;
+font-family: var(--font3)
+font-size:3.5vw;
 }
 section.image>p{
     background-color: rgba(0, 0, 0, 0.425);
-    width: 400px;
+    display: inline-block;
+    padding: 5px;
 }
     
 
