--- a/desafio012/estilo/style.css
+++ b/desafio012/estilo/style.css
@@ -48,7 +48,7 @@ padding-bottom: 10vh;
 line-height: 2em;
 padding-left: 30px;
 font-family: var(--font3)
-font-size:3.5vw;
+font-size 3.5vh;
 }
 section.image>p{
     background-color: rgba(0, 0, 0, 0.425);
