--- a/exercicios/ex026/mq002/estilo/retrato.css
+++ b/exercicios/ex026/mq002/estilo/retrato.css
@@ -1,3 +1,8 @@
 @charset "UTF-8";
 
-/* APARELHO EM PÉ (portrait)
+/* APARELHO EM PÉ (portrait)*/
+
+body{
+    background-image: url(../imagens/cev-portrait.jpg);
+    background-position: center bottom;
+}
