--- a/exercicios/ex026/mq002/estilos/style.css
+++ b/exercicios/ex026/mq002/estilos/style.css
@@ -1,2 +1,21 @@
 @charset "UTF-8";
-/*configurações gerais
+/*configurações gerais*/
+
+* {
+    margin: 0px;
+    padding: 0px;
+    font-family: Arial, Helvetica, sans-serif;
+}
+html, body {
+    width: 100vw;
+    height: 100vh;
+    background-color: #233EFF;
+    background-size: contain;
+    background-repeat: no-repeat;
+
+}
+h1{
+    color: white;
+    box-shadow: 1px 1px 0px #0d1761;
+    padding: 10px;
+}
