--- a/exercicios/ex026/mq004/estilos/style.css
+++ b/exercicios/ex026/mq004/estilos/style.css
@@ -11,7 +11,7 @@
     padding: 0px;
 }
 
-html, body{
+html{
    
     height: 100vh;
 }
@@ -22,8 +22,9 @@ body{
 }
 
 main{
-    background-color: rgba(255, 255, 255, 0.781);
+    background-color: rgba(255, 255, 255, 0.788);
     background-size: 90vw;
+    width: 400px;
     margin: auto;
     border-radius: 10px;
     padding: 10px;
@@ -32,9 +33,10 @@ main{
 
 h1{
    text-align: center;
-    text-shadow: 2px 1px 1px black;
+    text-shadow: 2px 1px 0px black;
     color: white;
 }
+
 
 img#phone{display: block;}
 img#tablet{display: none;}
