ex26005media query

--- a/exercicios/ex026/mq005/estilos/style.css
+++ b/exercicios/ex026/mq005/estilos/style.css
@@ -15,8 +15,22 @@ header >h1{
     padding: 10px;
     text-align: center;
 }
-menu{
+
+#burger{ 
+    background-color: rgb(63, 62, 62);
     display: block;
+    color: white;
+    text-align: center;
+    padding: 10px;
+
+}
+#burger:hover{
+    background-color: white;
+    color: black;
+    cursor: pointer;
+}
+menu{
+    display: none;
 }
 
 menu > ul { list-style-type: none;
