--- a/exercicios/ex026/mq005/estilos/style.css
+++ b/exercicios/ex026/mq005/estilos/style.css
@@ -5,11 +5,15 @@
     font-family: 'Times New Roman', Times, serif;
 }
 html,body{
-    background-color: gray;
+    background: gray url(../imagem/walppaper\ Planeta.jpg) no-repeat;
+    background-size: cover;
+    background-attachment:fixed ;
+    
 }
 
-header{
-    background-color: gray;
+header{ color: white;
+   
+  
 }
 header >h1{
     padding: 10px;
@@ -22,13 +26,19 @@ header >h1{
     color: white;
     text-align: center;
     padding: 10px;
+    border-radius: 20px;
+    width: 100px;
+    margin: auto;
+    margin-bottom: 10px;
 
 }
 #burger:hover{
     background-color: white;
     color: black;
     cursor: pointer;
+
 }
+
 menu{
     display: none;
 }
@@ -46,19 +56,29 @@ menu > ul >li > a{
     text-align: center;
     border: solid;
     border-top: 1px solid rgb(185, 184, 184);
+    border-radius: 10px;
+    width: 400px;
+    margin: auto;
+    margin-top: 2px;
+    
+    
 }
 
 menu > ul > li > a:hover{
-    background-color: rgba(167, 163, 163, 0.479);
+    background-color: rgba(167, 163, 163, 0.753);
+    box-sizing: border-box;
+    text-decoration: overline;
+    transition: 0.8s , border 5s;
 }
 
 main{
     width: 90vw;
-    background-color: white;
+    background-color: rgba(255, 251, 251, 0.849);
     margin: auto;
     padding: 10px;
    border-radius: 10px;
    margin-top: 10px;
+   display: block;
    
 }
 
@@ -90,17 +110,23 @@ section  {
  
 }
 
-section>h1,h2,h3{ text-align: center;
-    padding: 10px;
+section>h1,h2,h3{ 
+    text-align: center;
+    padding: 10px; 
+    text-decoration: underline;
                     
 }
 
 footer{
+    background-color: rgba(255, 255, 255, 0.418);
     color: black;
     border: 0px 1px 1px 1px solid rgb(27, 23, 23);
     padding: 10px;
     width: 90vw;
     margin: auto;
-  
+    margin-top: 10px;
+    margin-bottom: 20px;
+    padding: 5px;
+    border-radius: 10px;
     
 }
